# Lumberjack

./: .$Lumberjack-Logging.drawio.bkp  .$Lumberjack-Logging.drawio.dtmp  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Lumberjack-Logging.drawio  README.md  build.sh  build_init.sh  linter.sh  test.sh
.github/actions/setup-cpp/: action.yaml
.github/workflows/: lumberjack-build.yml
docs/: README.md  development-notes.md
docs/build-doc/: README.md  linter.md  testing.md
docs/coding-standards/: README.md
docs/repository/: README.md  tags.md
include/: Logger.h  StandardOutputLogger.h
include/lumberjack/: LogLevel.h  Logger.h  logging.h
include/lumberjack/configuration/: LogConfiguration.h  LogConfigurations.h
include/lumberjack/format/: AbstractMessageBuilder.h  DateMessageAppender.h  DefaultLogFormatter.h  ILogFormatter.h  IMessageBuilder.h  LogMessageFormat.h  SourceMessageAppender.h  TimeMessageAppender.h
include/lumberjack/format/builder/: AbstractMessageBuilder.h  DateMessageAppender.h  IMessageBuilder.h  LogLevelMessageAppender.h  MessageBuilderInput.h  SourceMessageAppender.h  TimeMessageAppender.h
include/lumberjack/time/: ITimeProvider.h  SystemTimeProvider.h  time_functions.h
include/lumberjack/writer/: ILogWriter.h  StandardOutputWriter.h
src/: Logger.cpp  StandardOutputLogger.cpp  logging.cpp
src/configuration/: LogConfiguration.cpp  LogConfigurations.cpp
src/format/: AbstractMessageBuilder.cpp  DateMessageAppender.cpp  DefaultLogFormatter.cpp  LogMessageFormat.cpp  SourceMessageAppender.cpp  TimeMessageAppender.cpp
src/format/builder/: AbstractMessageBuilder.cpp  DateMessageAppender.cpp  LogLevelMessageAppender.cpp  SourceMessageAppender.cpp  TimeMessageAppender.cpp
src/time/: SystemTimeProvider.cpp  time_functions.cpp
src/writer/: StandardOutputWriter.cpp
tests/: test_StandardOutputLogger.cpp
tests/configuration/: MockLogConfiguration.h  test_LogConfiguration.cpp  test_LogConfigurations.cpp
tests/format/: MockLogFormatter.h  test_DateMessageAppender.cpp  test_DefaultLogFormatter.cpp  test_SourceMessageAppender.cpp  test_TimeMessageAppender.cpp
tests/format/builder/: test_DateMessageAppender.cpp  test_LogLevelMessageAppender.cpp  test_SourceMessageAppender.cpp  test_TimeMessageAppender.cpp
tests/integration/: test_Logger.cpp
tests/time/: MockTimeProvider.h
tests/writer/: MockLogWriter.h  test_StandardOutputWriter.cpp
